--- a/main.html
+++ b/main.html
@@ -8,6 +8,59 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="#" method="post">
+		<!-- Name -->
+		<label for="name">Name*</label>
+		<input type="text" id="name" required>
+		<br><br>
+
+		<!--Email -->
+		<label for="email">Email*</label>
+		<input type="email" id="email" required>
+		<br><br>
+
+		<!-- Gender -->
+		<label>Gender*  :</label>
+		<label for="male">Male</label>
+		<input type="radio" id="male" name="gender" required>
+		<label for="female">Female</label>
+		<input type="radio" id="female" name="gender" required>
+		<label for="other">Other</label>
+		<input type="radio" id="other" name="gender" required>
+		<br><br>
+
+		<!--Laptop brands -->
+		<label for="laptop">Laptop Brand : </label>
+		<select id="laptop">
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select>
+		<br><br>
+
+		<!--Age -->
+		<label for="age">Age*</label>
+		<input type="number" id="age" required>
+		<br><br>
+
+		<!-- DOB -->
+		<label for="dob">Date of Birth* :</label>
+		<input type="date" id="dob" required>
+		<br><br>
+
+		<!-- Password -->
+		<label for="password">Password* :</label>
+		<input type="password" id="password" required>
+		<br><br>
+
+		<!-- Portfolio URL -->
+		<label for="portfolio">Portfolio URL* :</label>
+		<input type="url" id="portfolio" required>
+		<br><br>
+
+		<button type="submit">Submit</button>
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
