--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
 		<input type="url" id="portfolio" required>
 		<br><br>
 
-		<button type="submit">Submit</button>
+		<button type="submit">Button</button>
 	</form>
 	
     <script type="text/javascript" src="./script.js">
