--- a/main.html
+++ b/main.html
@@ -25,13 +25,12 @@
 		<input type="radio" id="male" name="gender" required>
 		<label for="female">Female</label>
 		<input type="radio" id="female" name="gender" required>
-		<label for="other">Other</label>
-		<input type="radio" id="other" name="gender" required>
 		<br><br>
 
 		<!--Laptop brands -->
 		<label for="laptop">Laptop Brand : </label>
 		<select id="laptop">
+			<option disabled>select</option>
 			<option>Apple</option>
 			<option>Asus</option>
 			<option>HP</option>
@@ -54,7 +53,7 @@
 		<br><br>
 
 		<!-- Portfolio URL -->
-		<label for="portfolio">Portfolio URL* :</label>
+		<label for="portfolio">URL Input* :</label>
 		<input type="url" id="portfolio" required>
 		<br><br>
 
